# Hackhathon-II-Todolist

./: .gitignore  README.md  fix_menu.py  fix_menu2.py  fix_menu3.py  pyproject.toml  speckit.constitution
.claude/: settings.local.json
.claude/skills/Add-Task-Skill/: SKILL.md
.claude/skills/Delete-Task-Skill/: SKILL.md
.claude/skills/List-Tasks-Skill/: SKILL.md
.claude/skills/Update-Task-Skill/: SKILL.md
.claude/skills/Validate-Input-Skill/: SKILL.md
specs/001-in-memory-todo-cli/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-in-memory-todo-cli/checklists/: requirements.md
specs/001-in-memory-todo-cli/contracts/: task-operations.md
src/: __init__.py
src/cli/: __init__.py  commands.py  formatter.py  main.py  menu.py
src/models/: __init__.py  enums.py  recurrence_rule.py  task.py
src/services/: __init__.py  recurrence_engine.py  task_operations.py  task_store.py
src/utils/: __init__.py  datetime_parser.py  validators.py
tests/: __init__.py
tests/integration/: test_cli_advanced.py  test_cli_basic.py  test_cli_organization.py
tests/unit/: test_datetime_parser.py  test_recurrence_engine.py  test_task_model.py  test_task_operations_org.py  test_task_store.py
